# mmd-iframe-template

./: .gitignore  README.md  inject.html  navigator.json  package-lock.json
Pokemon-Template/: index.html
defender/: defender.js  (+6 more)
template/WorldEngine/v4/: Cargo.toml  run.ps1
template/WorldEngine/v4/apps/client/: index.html  package.json  vite.config.ts
template/WorldEngine/v4/apps/client/src/: main.ts
template/WorldEngine/v4/apps/editor/: package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
template/WorldEngine/v4/apps/editor/src/: App.vue  engine.ts  style.css
template/WorldEngine/v4/apps/editor/src/components/layout/: SplitPanel.vue  TabBar.vue  Toolbar.vue
template/WorldEngine/v4/apps/editor/src/components/scene/: HierarchyPanel.vue  InspectorPanel.vue  SceneToolbar.vue
template/WorldEngine/v4/apps/editor/src/composables/: useBldPresets.ts  useConfigIO.ts
template/WorldEngine/v4/apps/editor/src/stores/: useScene.ts
template/WorldEngine/v4/apps/editor/src/views/: TabAI.vue  TabAssets.vue  TabBuildingEditor.vue  TabMap.vue  TabPhysics.vue  TabPreview.vue  TabRules.vue  TabScene.vue  TabWorld.vue
template/WorldEngine/v4/crates/engine-core/src/ecs/: component.rs  mod.rs  world.rs
template/WorldEngine/v4/crates/engine-core/src/math/: mat4.rs  noise.rs  quat.rs  vec3.rs
template/WorldEngine/v4/crates/engine-core/src/pathfind/: astar.rs
template/WorldEngine/v4/crates/engine-core/src/physics/: col.rs  rigid.rs
template/WorldEngine/v4/crates/engine-core/src/spatial/: mod.rs
template/WorldEngine/v4/crates/engine-wasm/: Cargo.toml
(+172 files in other folders)
