[package]
name = "engine-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engine-core = { path = "../engine-core" }
wasm-bindgen.workspace = true
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
console_error_panic_hook = "0.1"

[dependencies.web-sys]
workspace = true
features = [
	"console"
]
